[gd_scene load_steps=3 format=2]

[ext_resource path="res://Juego/Autoloads/MusicaJuego.gd" type="Script" id=1]
[ext_resource path="res://Juego/Niveles/Musica/POL-luxury-living-short.wav" type="AudioStream" id=2]

[node name="MusicaJuego" type="Node"]
script = ExtResource( 1 )

[node name="MusicaNivel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Musica"

[node name="MusicaCombate" type="AudioStreamPlayer" parent="."]

[node name="TweenMusicaOn" type="Tween" parent="."]

[node name="TweenMusicaOff" type="Tween" parent="."]

[connection signal="tween_completed" from="TweenMusicaOff" to="." method="_on_TweenMusicaOff_tween_completed"]
